Add database initialization scripts to multiple pages and improve navigation manager's database readiness checks

--- a/index.html
+++ b/index.html
@@ -203,6 +203,19 @@
     <script src="js/input-sanitizer.js"></script>
     <script src="js/supabase-config.js"></script>
     <script src="js/database-manager.js"></script>
+    <script>
+      // Initialize database
+      document.addEventListener('DOMContentLoaded', async () => {
+        try {
+          if (window.DatabaseManager && window.UmojaConfig) {
+            window.UmojaDB = await window.DatabaseManager.waitForConfigAndCreate();
+            console.log('✅ Database initialized for index page');
+          }
+        } catch (error) {
+          console.error('❌ Database initialization failed:', error);
+        }
+      });
+    </script>
     <script src="js/navigation.js"></script>
     <script src="js/main.js"></script>
   </body>
