--- a/pages/about.html
+++ b/pages/about.html
@@ -234,6 +234,19 @@
     <script src="../js/input-sanitizer.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/database-manager.js"></script>
+    <script>
+      // Initialize database
+      document.addEventListener('DOMContentLoaded', async () => {
+        try {
+          if (window.DatabaseManager && window.UmojaConfig) {
+            window.UmojaDB = await window.DatabaseManager.waitForConfigAndCreate();
+            console.log('✅ Database initialized for about page');
+          }
+        } catch (error) {
+          console.error('❌ Database initialization failed:', error);
+        }
+      });
+    </script>
     <script src="../js/navigation.js"></script>
     <script src="../js/main.js"></script>
 </body>
