--- a/index.html
+++ b/index.html
@@ -205,14 +205,15 @@
     <script src="js/database-manager.js"></script>
     <script>
       // Initialize database
-      document.addEventListener('DOMContentLoaded', async () => {
+      document.addEventListener("DOMContentLoaded", async () => {
         try {
           if (window.DatabaseManager && window.UmojaConfig) {
-            window.UmojaDB = await window.DatabaseManager.waitForConfigAndCreate();
-            console.log('✅ Database initialized for index page');
+            window.UmojaDB =
+              await window.DatabaseManager.waitForConfigAndCreate();
+            console.log("✅ Database initialized for index page");
           }
         } catch (error) {
-          console.error('❌ Database initialization failed:', error);
+          console.error("❌ Database initialization failed:", error);
         }
       });
     </script>
