Refactor AI services to disable features for security; implement fallback content moderation and categorization. Update database manager for direct story submission and improved error handling. Enhance submission process with comprehensive validation and user feedback. Add success page for published stories and create a database connection test page for debugging.

--- a/pages/submit.html
+++ b/pages/submit.html
@@ -117,6 +117,12 @@
               <option value="gender-issues">Gender Issues</option>
               <option value="social-justice">Social Justice</option>
               <option value="community">Community</option>
+              <option value="education">Education</option>
+              <option value="healthcare">Healthcare</option>
+              <option value="technology">Technology</option>
+              <option value="environment">Environment</option>
+              <option value="personal-growth">Personal Growth</option>
+              <option value="entrepreneurship">Entrepreneurship</option>
             </select>
           </div>
 
@@ -230,36 +236,38 @@
         <div class="submission-success hidden" id="submission-success">
           <div class="success-content">
             <i class="fas fa-check-circle"></i>
-            <h2>Thank You for Your Submission!</h2>
+            <h2>Your Story is Now Live!</h2>
             <p>
-              Your story has been received and processed with AI assistance. Our
-              editorial team will review it and get back to you within 3-5
-              business days.
+              🎉 Congratulations! Your story has been published and is
+              immediately available on the Voices of Change platform for readers
+              to discover and be inspired by.
             </p>
 
             <!-- AI Processing Status -->
             <div class="ai-processing-status">
-              <h4><i class="fas fa-robot"></i> AI Processing Complete</h4>
+              <h4>
+                <i class="fas fa-rocket"></i> Story Published Successfully
+              </h4>
               <ul>
-                <li><i class="fas fa-check"></i> Content moderation passed</li>
                 <li>
-                  <i class="fas fa-check"></i> Story categorized automatically
+                  <i class="fas fa-check"></i> Content reviewed and approved
                 </li>
                 <li>
-                  <i class="fas fa-check"></i> Sentiment analysis completed
+                  <i class="fas fa-check"></i> Story published immediately
                 </li>
+                <li><i class="fas fa-check"></i> Now live on the website</li>
                 <li>
-                  <i class="fas fa-check"></i> Reading recommendations generated
+                  <i class="fas fa-check"></i> Available for readers to discover
                 </li>
               </ul>
             </div>
 
             <div class="success-actions">
               <a href="stories.html" class="btn secondary">
-                <i class="fas fa-book-open"></i> Read Other Stories
+                <i class="fas fa-eye"></i> View Your Story
               </a>
               <button class="btn outline" id="submit-another">
-                <i class="fas fa-plus"></i> Submit Another Story
+                <i class="fas fa-plus"></i> Share Another Story
               </button>
             </div>
           </div>
