--- a/pages/profile.html
+++ b/pages/profile.html
@@ -423,6 +423,8 @@
     <script src="../js/input-sanitizer.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/database-manager.js"></script>
+    <script src="../js/session-manager.js"></script>
+    <script src="../js/auth-guard.js"></script>
     <script>
       // Initialize database for profile page
       document.addEventListener("DOMContentLoaded", async () => {
