--- a/pages/stories.html
+++ b/pages/stories.html
@@ -26,7 +26,7 @@
             <li><a href="about.html">About Umoja</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li id="auth-nav-item">
-              <a href="auth.html" class="btn outline">Sign In</a>
+              <!-- Profile dropdown will be inserted here by auth-guard -->
             </li>
           </ul>
         </nav>
@@ -169,6 +169,8 @@
     <script src="../js/input-sanitizer.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/database-manager.js"></script>
+    <script src="../js/session-manager.js"></script>
+    <script src="../js/auth-guard.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/stories.js"></script>
     <script src="../js/navigation.js"></script>
