Enhance story submission and editing features
- Implement comprehensive error handling and notifications in submit-enhanced.js
- Add draft management functionality with improved loading and saving mechanisms
- Introduce edit mode for stories with UI updates and loading logic
- Refactor form validation and character counting for better user experience
- Update notification system integration across various pages
- Improve styling for action buttons in profile and stories pages
- Remove legacy authentication check script from submit.html

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
     <!-- Core JavaScript files - order matters! -->
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="js/notification-system.js"></script>
     <script src="js/global-error-handler.js"></script>
     <script src="js/input-sanitizer.js"></script>
     <script src="js/supabase-config.js"></script>
