--- a/pages/stories.html
+++ b/pages/stories.html
@@ -165,12 +165,14 @@
     </footer>
 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="../js/notification-system.js"></script>
     <script src="../js/global-error-handler.js"></script>
     <script src="../js/input-sanitizer.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/database-manager.js"></script>
     <script src="../js/session-manager.js"></script>
     <script src="../js/auth-guard.js"></script>
+    <script src="../js/story-image-utils.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/stories.js"></script>
     <script src="../js/navigation.js"></script>
