--- a/pages/submit.html
+++ b/pages/submit.html
@@ -326,6 +326,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 
     <!-- Core Scripts - order matters! -->
+    <script src="../js/notification-system.js"></script>
     <script src="../js/global-error-handler.js"></script>
     <script src="../js/input-sanitizer.js"></script>
     <script src="../js/supabase-config.js"></script>
@@ -337,46 +338,5 @@
     <script src="../js/main.js"></script>
     <script src="../js/submit-enhanced.js"></script>
 
-    <!-- Authentication Check -->
-    <script>
-      document.addEventListener("DOMContentLoaded", async () => {
-        try {
-          // Wait for UmojaConfig to be available
-          let retries = 0;
-          while (!window.UmojaConfig && retries < 50) {
-            await new Promise((resolve) => setTimeout(resolve, 100));
-            retries++;
-          }
-
-          if (!window.UmojaConfig) {
-            throw new Error("UmojaConfig not available");
-          }
-
-          // Initialize database manager
-          if (!window.UmojaDB) {
-            window.UmojaDB =
-              await window.DatabaseManager.waitForConfigAndCreate();
-          }
-
-          // Check if user is authenticated
-          const user = await window.UmojaDB.getCurrentUser();
-          if (!user) {
-            console.warn(
-              "User not authenticated. You need to be logged in to save stories."
-            );
-            alert(
-              "Please note: You need to be logged in to save stories. Your story won't be saved if you're not logged in."
-            );
-          } else {
-            console.log("User authenticated:", user.email);
-          }
-        } catch (error) {
-          console.error("Auth check error:", error);
-          alert(
-            "There might be an issue with authentication. Your story might not be saved properly if you're not logged in."
-          );
-        }
-      });
-    </script>
   </body>
 </html>
