Added animation transitions

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -545,6 +545,7 @@
     <script src="../js/notification-system.js"></script>
     <script src="../js/global-error-handler.js"></script>
     <script src="../js/input-sanitizer.js"></script>
+    <script src="../js/page-transitions.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/database-manager.js"></script>
     <script src="../js/session-manager.js"></script>
