--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     <script src="js/notification-system.js"></script>
     <script src="js/global-error-handler.js"></script>
     <script src="js/input-sanitizer.js"></script>
+    <script src="js/page-fallback.js"></script>
+    <script src="js/page-transitions.js"></script>
     <script src="js/supabase-config.js"></script>
     <script src="js/database-manager.js"></script>
     <script src="js/session-manager.js"></script>
