--- a/pages/submit.html
+++ b/pages/submit.html
@@ -329,6 +329,7 @@
     <script src="../js/notification-system.js"></script>
     <script src="../js/global-error-handler.js"></script>
     <script src="../js/input-sanitizer.js"></script>
+    <script src="../js/page-transitions.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/ai-services.js"></script>
     <script src="../js/database-manager.js"></script>
