--- a/pages/auth.html
+++ b/pages/auth.html
@@ -517,15 +517,10 @@
               "🚫 Sign-in form submission prevented (waiting for auth manager)"
             );
 
-            // Show a message to user
+            // Log attempt instead of showing warning
             const formData = new FormData(e.target);
             const email = formData.get("email");
             console.log("📧 Attempted sign-in for:", email);
-
-            // Use notification system to inform user
-            window.showWarning?.(
-              "Authentication system is still loading. Please wait a moment and try again."
-            );
           });
         }
 
@@ -535,9 +530,7 @@
             console.log(
               "🚫 Sign-up form submission prevented (waiting for auth manager)"
             );
-            window.showWarning?.(
-              "Authentication system is still loading. Please wait a moment and try again."
-            );
+            // No user-facing warning
           });
         }
       });
