supabase env fixes

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -535,6 +535,7 @@
         }
       });
     </script>
+    <script src="../js/config.js"></script>
     <script src="../js/notification-system.js"></script>
     <script src="../js/global-error-handler.js"></script>
     <script src="../js/input-sanitizer.js"></script>
