--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Scripts -->
+    <script src="js/config.js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="js/notification-system.js"></script>
+    <script src="js/global-error-handler.js"></script>
+    <script src="js/input-sanitizer.js"></script>
+    <script src="js/page-fallback.js"></script>
+    <script src="js/page-transitions.js"></script>
+    <script src="js/supabase-config.js"></script>
+    <script src="js/database-manager.js"></script>
+    <script src="js/session-manager.js"></script>
+    <script src="js/auth-guard.js"></script>
+    <script src="js/story-image-utils.js"></script>
+    <script src="js/navigation.js"></script>
+    <script src="js/main.js"></script>
     <title>Voices of Change - Social Impact Blog</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
