--- a/pages/profile.html
+++ b/pages/profile.html
@@ -436,6 +436,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="../js/config.js"></script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="../js/notification-system.js"></script>
     <script src="../js/global-error-handler.js"></script>
@@ -446,16 +447,24 @@
     <script src="../js/session-manager.js"></script>
     <script src="../js/auth-guard.js"></script>
     <script>
-      // Initialize database for profile page
+      // Initialize database and profile manager
       document.addEventListener("DOMContentLoaded", async () => {
         try {
+          // First initialize database
           if (window.DatabaseManager && window.UmojaConfig) {
             window.UmojaDB =
               await window.DatabaseManager.waitForConfigAndCreate();
             console.log("✅ Database initialized for profile page");
           }
+
+          // Then initialize profile manager
+          if (window.ProfileManager) {
+            window.profileManager = new window.ProfileManager();
+            await window.profileManager.initialize();
+            console.log("✅ Profile manager initialized");
+          }
         } catch (error) {
-          console.error("❌ Database initialization failed:", error);
+          console.error("❌ Database or profile initialization failed:", error);
         }
       });
     </script>
