--- a/pages/profile.html
+++ b/pages/profile.html
@@ -447,24 +447,19 @@
     <script src="../js/session-manager.js"></script>
     <script src="../js/auth-guard.js"></script>
     <script>
-      // Initialize database and profile manager
       document.addEventListener("DOMContentLoaded", async () => {
         try {
-          // First initialize database
           if (window.DatabaseManager && window.UmojaConfig) {
             window.UmojaDB =
               await window.DatabaseManager.waitForConfigAndCreate();
-            console.log("✅ Database initialized for profile page");
           }
 
-          // Then initialize profile manager
           if (window.ProfileManager) {
             window.profileManager = new window.ProfileManager();
             await window.profileManager.initialize();
-            console.log("✅ Profile manager initialized");
           }
         } catch (error) {
-          console.error("❌ Database or profile initialization failed:", error);
+          // Error handling
         }
       });
     </script>
