--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <li><a href="pages/submit.html">Submit Your Story</a></li>
             <li><a href="pages/about.html">About Umoja</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/chat.html" class="ai-support-link">
+              <i class="fas fa-heart"></i> AI Support
+            </a></li>
             <li id="auth-nav-item">
               <!-- Profile dropdown will be inserted here by auth-guard -->
             </li>
