ai-phase2-feautures

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,7 @@
             <li><a href="submit.html">Submit Your Story</a></li>
             <li><a href="about.html" class="active">About Umoja</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="chat.html">AI Support</a></li>
             <li id="auth-nav-item">
               <!-- Profile dropdown will be inserted here by auth-guard -->
             </li>
