--- a/pages/chat.html
+++ b/pages/chat.html
@@ -60,10 +60,13 @@
             </div>
             <div class="intro-text">
               <h1>Umoja AI Support</h1>
-              <p>A safe space to share your thoughts and feelings. I'm here to listen, support, and provide resources when you need them.</p>
+              <p>
+                A safe space to share your thoughts and feelings. I'm here to
+                listen, support, and provide resources when you need them.
+              </p>
             </div>
           </div>
-          
+
           <!-- Crisis Resources (always visible) -->
           <div class="crisis-resources">
             <h3><i class="fas fa-life-ring"></i> Crisis Resources</h3>
@@ -76,7 +79,11 @@
                 <i class="fas fa-sms"></i>
                 <span>Text HOME to 741741 - Crisis Text Line</span>
               </a>
-              <a href="https://www.iasp.info/resources/Crisis_Centres/" target="_blank" class="resource-link">
+              <a
+                href="https://www.iasp.info/resources/Crisis_Centres/"
+                target="_blank"
+                class="resource-link"
+              >
                 <i class="fas fa-globe"></i>
                 <span>International Crisis Centers</span>
               </a>
@@ -93,8 +100,16 @@
               </div>
               <div class="message-content">
                 <div class="message-text">
-                  <p>Hello! I'm Umoja AI, and I'm here to provide emotional support and understanding. This is a safe space where you can share whatever is on your mind.</p>
-                  <p>Whether you're dealing with mental health challenges, social justice issues, personal struggles, or just need someone to listen - I'm here for you.</p>
+                  <p>
+                    Hello! I'm Umoja AI, and I'm here to provide emotional
+                    support and understanding. This is a safe space where you
+                    can share whatever is on your mind.
+                  </p>
+                  <p>
+                    Whether you're dealing with mental health challenges, social
+                    justice issues, personal struggles, or just need someone to
+                    listen - I'm here for you.
+                  </p>
                   <p><strong>How are you feeling today?</strong></p>
                 </div>
                 <div class="message-time" data-time="now">Just now</div>
@@ -117,11 +132,11 @@
                 </div>
               </div>
             </div>
-            
+
             <div class="chat-input-container">
               <div class="input-wrapper">
-                <textarea 
-                  id="chat-input" 
+                <textarea
+                  id="chat-input"
                   placeholder="Share what's on your mind... (Press Enter to send, Shift+Enter for new line)"
                   rows="1"
                   maxlength="2000"
@@ -135,11 +150,19 @@
                   <span id="char-count">0</span>/2000
                 </div>
                 <div class="chat-actions">
-                  <button id="clear-chat" class="action-btn" title="Clear conversation">
+                  <button
+                    id="clear-chat"
+                    class="action-btn"
+                    title="Clear conversation"
+                  >
                     <i class="fas fa-trash"></i> Clear Chat
                   </button>
-                  <button id="save-chat" class="action-btn" title="Save conversation" style="display: none;">
-                    <i class="fas fa-save"></i> Save
+                  <button
+                    id="save-chat"
+                    class="action-btn"
+                    title="Save conversation"
+                  >
+                    <i class="fas fa-save"></i> Save Chat
                   </button>
                 </div>
               </div>
@@ -150,7 +173,7 @@
     </section>
 
     <!-- Loading overlay -->
-    <div class="loading-overlay" id="loading-overlay" style="display: none;">
+    <div class="loading-overlay" id="loading-overlay" style="display: none">
       <div class="loading-content">
         <div class="spinner"></div>
         <p>Connecting to AI support...</p>
