--- a/pages/profile.html
+++ b/pages/profile.html
@@ -288,6 +288,7 @@
             <li><a href="submit.html">Submit Your Story</a></li>
             <li><a href="about.html">About Umoja</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="chat.html">AI Support</a></li>
             <li id="auth-nav-item">
               <!-- This will be populated by JavaScript -->
             </li>
