--- a/pages/stories.html
+++ b/pages/stories.html
@@ -25,9 +25,7 @@
             <li><a href="submit.html">Submit Your Story</a></li>
             <li><a href="about.html">About Umoja</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="chat.html" class="ai-support-link">
-              <i class="fas fa-heart"></i> AI Support
-            </a></li>
+            <li><a href="chat.html">AI Support</a></li>
             <li id="auth-nav-item">
               <!-- Profile dropdown will be inserted here by auth-guard -->
             </li>
