--- a/pages/chat.html
+++ b/pages/chat.html
@@ -67,28 +67,7 @@
             </div>
           </div>
 
-          <!-- Crisis Resources (always visible) -->
-          <div class="crisis-resources">
-            <h3><i class="fas fa-life-ring"></i> Crisis Resources</h3>
-            <div class="resources-grid">
-              <a href="tel:988" class="resource-link">
-                <i class="fas fa-phone"></i>
-                <span>988 - Suicide Prevention Lifeline</span>
-              </a>
-              <a href="sms:741741" class="resource-link">
-                <i class="fas fa-sms"></i>
-                <span>Text HOME to 741741 - Crisis Text Line</span>
-              </a>
-              <a
-                href="https://www.iasp.info/resources/Crisis_Centres/"
-                target="_blank"
-                class="resource-link"
-              >
-                <i class="fas fa-globe"></i>
-                <span>International Crisis Centers</span>
-              </a>
-            </div>
-          </div>
+          <!-- Crisis resources panel removed -->
         </div>
 
         <div class="chat-container">
