--- a/pages/stories.html
+++ b/pages/stories.html
@@ -170,6 +170,7 @@
     <script src="../js/global-error-handler.js"></script>
     <script src="../js/input-sanitizer.js"></script>
     <script src="../js/page-transitions.js"></script>
+    <script src="../js/config.js"></script>
     <script src="../js/supabase-config.js"></script>
     <script src="../js/database-manager.js"></script>
     <script src="../js/session-manager.js"></script>
