feat: Enhance story submission process with database initialization, connection testing, and improved error handling

--- a/pages/submit.html
+++ b/pages/submit.html
@@ -339,6 +339,6 @@
     <script src="../js/auth-guard.js"></script>
     <script src="../js/navigation.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/submit-enhanced.js"></script>
+    <script src="../js/submit.js"></script>
   </body>
 </html>
