feat: Simplify success messages in story submission and enhance notification system

--- a/pages/submit.html
+++ b/pages/submit.html
@@ -237,40 +237,8 @@
         <div class="submission-success hidden" id="submission-success">
           <div class="success-content">
             <i class="fas fa-check-circle"></i>
-            <h2>Your Story is Now Live!</h2>
-            <p>
-              🎉 Congratulations! Your story has been published and is
-              immediately available on the Voices of Change platform for readers
-              to discover and be inspired by.
-            </p>
-
-            <!-- AI Processing Status -->
-            <div class="ai-processing-status">
-              <h4>
-                <i class="fas fa-rocket"></i> Story Published Successfully
-              </h4>
-              <ul>
-                <li>
-                  <i class="fas fa-check"></i> Content reviewed and approved
-                </li>
-                <li>
-                  <i class="fas fa-check"></i> Story published immediately
-                </li>
-                <li><i class="fas fa-check"></i> Now live on the website</li>
-                <li>
-                  <i class="fas fa-check"></i> Available for readers to discover
-                </li>
-              </ul>
-            </div>
-
-            <div class="success-actions">
-              <a href="stories.html" class="btn secondary">
-                <i class="fas fa-eye"></i> View Your Story
-              </a>
-              <button class="btn outline" id="submit-another">
-                <i class="fas fa-plus"></i> Share Another Story
-              </button>
-            </div>
+            <h2>Story Published Successfully!</h2>
+            <p>Your story is now live and available for readers.</p>
           </div>
         </div>
       </div>
