--- a/pages/success.html
+++ b/pages/success.html
@@ -47,20 +47,20 @@
       }
       .action-buttons {
         display: flex;
-        gap: 15px;
+        gap: 10px;
         justify-content: center;
         flex-wrap: wrap;
-        margin-top: 30px;
+        margin-top: 20px;
       }
       .btn {
-        padding: 12px 24px;
+        padding: 8px 16px;
         border: none;
-        border-radius: 6px;
-        font-size: 16px;
+        border-radius: 4px;
+        font-size: 14px;
         text-decoration: none;
         display: inline-flex;
         align-items: center;
-        gap: 8px;
+        gap: 6px;
         cursor: pointer;
         transition: all 0.2s;
       }
@@ -96,36 +96,12 @@
       <h1 class="success-title">Story Published Successfully!</h1>
 
       <div class="success-message">
-        🎉 Congratulations! Your story has been published and is now live on the
-        Voices of Change platform. It's already available for readers to
-        discover and be inspired by your experience.
+        Your story has been published successfully!
       </div>
 
       <div class="story-info" id="story-info">
         <strong>📝 Your Submission:</strong>
         <div id="story-details">Loading story details...</div>
-      </div>
-
-      <div class="next-steps">
-        <h4>🎯 Your story is now live!</h4>
-        <ul>
-          <li>
-            <strong>Published:</strong> Your story is immediately available on
-            our stories page
-          </li>
-          <li>
-            <strong>Discoverable:</strong> Readers can find it through search
-            and category browsing
-          </li>
-          <li>
-            <strong>Shareable:</strong> You can share the direct link with
-            friends and family
-          </li>
-          <li>
-            <strong>Impactful:</strong> Your story is already helping inspire
-            and connect with others
-          </li>
-        </ul>
       </div>
 
       <div class="action-buttons">
@@ -135,22 +111,22 @@
           id="view-story-btn"
         >
           <i class="fas fa-eye"></i>
-          View Your Published Story
+          View Story
         </a>
 
         <a href="../pages/stories.html" class="btn btn-secondary">
           <i class="fas fa-book-open"></i>
-          Browse All Stories
+          All Stories
         </a>
 
         <a href="../pages/submit.html" class="btn btn-outline">
           <i class="fas fa-plus"></i>
-          Share Another Story
+          Submit Another
         </a>
 
         <a href="../index.html" class="btn btn-outline">
           <i class="fas fa-home"></i>
-          Back to Home
+          Home
         </a>
       </div>
 
